// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
@media(min-width:480px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    text-indent: 0;
    padding: 2px 0 0 8px;
  }
}

@media(min-width:760px) {
  .text {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
}

@media(min-width:1000px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    text-indent: 0;
    padding: 2px 0 0 8px;
  }
}

@media(min-width:1300px) {
  .text {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
}

@media(min-width:1760px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    text-indent: 0;
    padding: 2px 0 0 8px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: false, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #FC4040 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #FC4040 !important;
  background-color: #FC4040 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FB0404 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #FB0404 !important;
    background-color: #FB0404 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: false, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #CC1922 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #CC1922 !important;
  background-color: #CC1922 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #951219 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #951219 !important;
    background-color: #951219 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: true, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #88898C !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #FBFCFF !important;
  background-color: #FBFCFF !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FBFCFF !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #AFB0B3 !important;
    background-color: #AFB0B3 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #6B6D70 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #010205 !important;
  background-color: #010205 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #010205 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #535457 !important;
    background-color: #535457 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: false, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #09D087 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #09D087 !important;
  background-color: #09D087 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #069561 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #069561 !important;
    background-color: #069561 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: false, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #197E10 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #197E10 !important;
  background-color: #197E10 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #0E4809 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #0E4809 !important;
    background-color: #0E4809 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: true, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  text-indent: 0;
  padding: 2px 0 0 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #FC4040 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #FC4040 !important;
  background-color: #FC4040 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FB0404 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #FB0404 !important;
    background-color: #FB0404 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #CC1922 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #CC1922 !important;
  background-color: #CC1922 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #951219 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #951219 !important;
    background-color: #951219 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: true, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #88898C !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #FBFCFF !important;
  background-color: #FBFCFF !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FBFCFF !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #AFB0B3 !important;
    background-color: #AFB0B3 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #6B6D70 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #010205 !important;
  background-color: #010205 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #010205 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #535457 !important;
    background-color: #535457 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false, isLoading: true and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  border-radius: 8px !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: calc(calc(6px + 2.125ex)/2 + 2px);
  left: calc(calc(6px + 2.125ex)/2 + 2px);
  transform: translate(-50%, -50%);
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  padding: 2px;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false, isLoading: true and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  border-radius: 8px !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: calc(calc(6px + 2.125ex)/2 + 2px);
  left: calc(calc(6px + 2.125ex)/2 + 2px);
  transform: translate(-50%, -50%);
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  padding: 2px;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true, isLoading: true and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: calc(calc(6px + 2.125ex)/2 + 2px);
  left: calc(calc(6px + 2.125ex)/2 + 2px);
  transform: translate(-50%, -50%);
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  padding: 2px;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true, isLoading: true and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.spinner {
  position: absolute;
  top: calc(calc(6px + 2.125ex)/2 + 2px);
  left: calc(calc(6px + 2.125ex)/2 + 2px);
  transform: translate(-50%, -50%);
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  padding: 2px;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: false, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #09D087 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #09D087 !important;
  background-color: #09D087 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #069561 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #069561 !important;
    background-color: #069561 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: false, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #197E10 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #197E10 !important;
  background-color: #197E10 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 8px !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #0E4809 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #0E4809 !important;
    background-color: #0E4809 !important;
  }
}

.text {
  order: 1;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: true, isLoading: false and theme dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: true, isLoading: false and theme light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  border-radius: 4px !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23FBFCFF" d="m20.22,7.47l-1.47-1.42-9.26,9.02-4.24-4.15-1.47,1.42,5.71,5.6,10.73-10.47Z"/></svg>') !important;
}
::slotted(input:indeterminate) {
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23010205" d="m20,11v2H4v-2h16Z"/></svg>') !important;
}
label {
  position: relative;
  display: flex;
  align-items: flex-start;
}
.text {
  order: 1;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 0;
  height: 1px;
  text-indent: -999999px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;
